2.1:
    - Cryolo / LoGpicker added back as an option
    - Watcher mode not tested yet
2.0:
    - Relion 4.0 support with the new scheduler, old Schedules removed
    - Topaz / 2D cls selection is now run by Relion
    - tif/mrc parsers updated, add EER support
1.1: fix installer
1.0:
    - separate mdoc parser, enable bigtiff header parser
    - add Cryoassess for 2D cls sorting, use it by default
    - create backup_selection.star so that user can see selected 2D classes
    - create .gui_projectdir to automatically "start" a new project
    - create .gui_manualpickjob.star so that user can visualize picking
    - sortcl2d job check for accuracy
    - add FEI MRC2 extended header support
    - replace Ctffind & Gctf paths by shell vars
    - switch off debug for release
    - update Scipion template
    - update documentation
0.9.10:
    - cleanup filtered mics for topaz and cryolo
    - add distance arg = half box size (when provided) to cryolo job
    - remove wait time
    - add a counter to stop preprocess schedule if no new mics after 2 hours
0.9.9:
    - add different picker options: cryolo, topaz, logpicker
    - add back the boxsize options to GUI
    - simplified Schedules: preprocess (3 options) and class2d. No cryolo retraining is used for now.
    - add parser tests
0.9.8:
    - update Scipion template, fixes for SerialEM option after 0.9.7
    - prints job time for external jobs
    - fix "wrong" cryolo model, gpu args
    - add topaz external job (not ready yet)
    - fix save_noDW
    - use MPIs for ctffind job
0.9.7:
    - set ACL
    - move more vars to config file
    - major Schedules update for relion 3.1: logpicker replaced by cryolo, cinderella added
    - replace symlink by copy for small files
    - remove boxsizes and until_ctf options
    - speed up recursive file search (replace os.walk by iglob)
    - fix gain file detection
    - fix wrong mask size
    - update README
    - add daemon mode
    - fix schedules abort/stop