@@ -24,4 +24,4 @@
 # *
 # **************************************************************************
 
-__version__ = '2.1b2'
+__version__ = '2.1b3'
