@@ -1,5 +1,6 @@
 2.1:
     - Cryolo / LoGpicker added back as an option
+    - Add input picker model for crYOLO / Topaz
     - Watcher mode not tested yet
 2.0:
     - Relion 4.0 support with the new scheduler, old Schedules removed
